{
  "version": 4,
  "terraform_version": "0.15.1",
  "serial": 260,
  "lineage": "6482ef23-656a-e9b9-010f-ae8b8fd493db",
  "resources": [
    {
      "module": "module.my_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-063d4ab14480ac177",
            "arn": "arn:aws:ec2:eu-west-1:597102139670:instance/i-063ea05241ca06d39",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-063ea05241ca06d39",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ssh-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00ef6a54c6608f329",
            "private_dns": "ip-10-0-1-12.eu-west-1.compute.internal",
            "private_ip": "10.0.1.12",
            "public_dns": "ec2-52-48-131-234.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.48.131.234",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d9def628e8766a26",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-080bdd60aba7b0bac",
            "tags": {
              "name": "bastion"
            },
            "tags_all": {
              "name": "bastion"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b8418723e47be244"
            ]
          },
          "dependencies": [
            "module.my_routes.aws_internet_gateway.gw",
            "module.my_sg.aws_security_group.allow_tls",
            "module.my_subnet.aws_subnet.public",
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-063d4ab14480ac177",
            "arn": "arn:aws:ec2:eu-west-1:597102139670:instance/i-028ab4972352cdb61",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-028ab4972352cdb61",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ssh-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a490db187c99fc88",
            "private_dns": "ip-10-0-2-10.eu-west-1.compute.internal",
            "private_ip": "10.0.2.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0538792d2cf60514a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01396d7d3c536bb68",
            "tags": {
              "name": "private1"
            },
            "tags_all": {
              "name": "private1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d55cfc1c3b95898d"
            ]
          },
          "dependencies": [
            "module.my_sg.aws_security_group.allow_private",
            "module.my_subnet.aws_subnet.private",
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-063d4ab14480ac177",
            "arn": "arn:aws:ec2:eu-west-1:597102139670:instance/i-04a095503022ab115",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04a095503022ab115",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ssh-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-040c378b09cae52cb",
            "private_dns": "ip-10-0-2-11.eu-west-1.compute.internal",
            "private_ip": "10.0.2.11",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b4ad519061dd26f2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01396d7d3c536bb68",
            "tags": {
              "name": "private2"
            },
            "tags_all": {
              "name": "private2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d55cfc1c3b95898d"
            ]
          },
          "dependencies": [
            "module.my_sg.aws_security_group.allow_private",
            "module.my_subnet.aws_subnet.private",
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-063d4ab14480ac177",
            "arn": "arn:aws:ec2:eu-west-1:597102139670:instance/i-069633b57fdd4f29c",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-069633b57fdd4f29c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ssh-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e5ab89087c14d139",
            "private_dns": "ip-10-0-1-10.eu-west-1.compute.internal",
            "private_ip": "10.0.1.10",
            "public_dns": "ec2-18-202-244-165.eu-west-1.compute.amazonaws.com",
            "public_ip": "18.202.244.165",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-094ede861ef628c23",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-080bdd60aba7b0bac",
            "tags": {
              "name": "public1"
            },
            "tags_all": {
              "name": "public1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-063b67cc65eef67af"
            ]
          },
          "dependencies": [
            "module.my_routes.aws_internet_gateway.gw",
            "module.my_sg.aws_security_group.allow_bastian",
            "module.my_subnet.aws_subnet.public",
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-063d4ab14480ac177",
            "arn": "arn:aws:ec2:eu-west-1:597102139670:instance/i-0d0895ca98fbdeb1c",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d0895ca98fbdeb1c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ssh-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-024eeb772728a61ab",
            "private_dns": "ip-10-0-1-11.eu-west-1.compute.internal",
            "private_ip": "10.0.1.11",
            "public_dns": "ec2-18-202-239-206.eu-west-1.compute.amazonaws.com",
            "public_ip": "18.202.239.206",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-048826f3ea28d3829",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-080bdd60aba7b0bac",
            "tags": {
              "name": "public2"
            },
            "tags_all": {
              "name": "public2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-063b67cc65eef67af"
            ]
          },
          "dependencies": [
            "module.my_routes.aws_internet_gateway.gw",
            "module.my_sg.aws_security_group.allow_bastian",
            "module.my_subnet.aws_subnet.public",
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_routes",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-gateway-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-021321a962001e5d0",
            "domain": "vpc",
            "id": "eipalloc-03e9f31b7ea0919b7",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0f79d813c723291e2",
            "private_dns": "ip-10-0-1-95.eu-west-1.compute.internal",
            "private_ip": "10.0.1.95",
            "public_dns": "ec2-54-75-98-1.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.75.98.1",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.my_routes",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:597102139670:internet-gateway/igw-08acaa693d5d05abb",
            "id": "igw-08acaa693d5d05abb",
            "owner_id": "597102139670",
            "tags": {
              "Name": "igw"
            },
            "tags_all": {
              "Name": "igw"
            },
            "vpc_id": "vpc-043c5a831548e8422"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_routes",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03e9f31b7ea0919b7",
            "id": "nat-0851dbceb5fdf486d",
            "network_interface_id": "eni-0f79d813c723291e2",
            "private_ip": "10.0.1.95",
            "public_ip": "54.75.98.1",
            "subnet_id": "subnet-080bdd60aba7b0bac",
            "tags": {
              "Name": "gw NAT"
            },
            "tags_all": {
              "Name": "gw NAT"
            }
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.main",
            "module.my_routes.aws_eip.nat-gateway-ip",
            "module.my_routes.aws_internet_gateway.gw",
            "module.my_subnet.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.my_routes",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:597102139670:route-table/rtb-094c58cd9d38a6ce6",
            "id": "rtb-094c58cd9d38a6ce6",
            "owner_id": "597102139670",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0851dbceb5fdf486d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-rt"
            },
            "tags_all": {
              "Name": "private-rt"
            },
            "vpc_id": "vpc-043c5a831548e8422"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_routes.aws_eip.nat-gateway-ip",
            "module.my_routes.aws_internet_gateway.gw",
            "module.my_routes.aws_nat_gateway.ngw",
            "module.my_subnet.aws_subnet.public",
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_routes",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:597102139670:route-table/rtb-0617bbf12e8ff2c1b",
            "id": "rtb-0617bbf12e8ff2c1b",
            "owner_id": "597102139670",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08acaa693d5d05abb",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt"
            },
            "tags_all": {
              "Name": "public-rt"
            },
            "vpc_id": "vpc-043c5a831548e8422"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_routes.aws_internet_gateway.gw",
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_routes",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-036db55d76325a48b",
            "route_table_id": "rtb-094c58cd9d38a6ce6",
            "subnet_id": "subnet-01396d7d3c536bb68"
          },
          "dependencies": [
            "module.my_routes.aws_eip.nat-gateway-ip",
            "module.my_routes.aws_internet_gateway.gw",
            "module.my_routes.aws_nat_gateway.ngw",
            "module.my_routes.aws_route_table.private",
            "module.my_subnet.aws_subnet.private",
            "module.my_subnet.aws_subnet.public",
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_routes",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f2fde9285d2e04d0",
            "route_table_id": "rtb-0617bbf12e8ff2c1b",
            "subnet_id": "subnet-080bdd60aba7b0bac"
          },
          "dependencies": [
            "module.my_routes.aws_internet_gateway.gw",
            "module.my_routes.aws_route_table.public",
            "module.my_subnet.aws_subnet.public",
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_bastian",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:597102139670:security-group/sg-063b67cc65eef67af",
            "description": "Allow bastion inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-063b67cc65eef67af",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.12/32"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_bastion",
            "name_prefix": "",
            "owner_id": "597102139670",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_bastian"
            },
            "tags_all": {
              "Name": "allow_bastian"
            },
            "timeouts": null,
            "vpc_id": "vpc-043c5a831548e8422"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:597102139670:security-group/sg-0d55cfc1c3b95898d",
            "description": "Allow ssh to private inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d55cfc1c3b95898d",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.12/32"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_private",
            "name_prefix": "",
            "owner_id": "597102139670",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_private"
            },
            "tags_all": {
              "Name": "allow_private"
            },
            "timeouts": null,
            "vpc_id": "vpc-043c5a831548e8422"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:597102139670:security-group/sg-0b8418723e47be244",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b8418723e47be244",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "597102139670",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-043c5a831548e8422"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:597102139670:subnet/subnet-01396d7d3c536bb68",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-01396d7d3c536bb68",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "597102139670",
            "tags": {
              "Name": "env-private"
            },
            "tags_all": {
              "Name": "env-private"
            },
            "vpc_id": "vpc-043c5a831548e8422"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:597102139670:subnet/subnet-080bdd60aba7b0bac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-080bdd60aba7b0bac",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "597102139670",
            "tags": {
              "Name": "env-public"
            },
            "tags_all": {
              "Name": "env-public"
            },
            "vpc_id": "vpc-043c5a831548e8422"
          },
          "dependencies": [
            "module.my_routes.aws_internet_gateway.gw",
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:597102139670:vpc/vpc-043c5a831548e8422",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bb1d6dd5987817ae",
            "default_route_table_id": "rtb-03b4a80bc9e820947",
            "default_security_group_id": "sg-05f4a5e26577eba1a",
            "dhcp_options_id": "dopt-dbd7cabd",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-043c5a831548e8422",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03b4a80bc9e820947",
            "owner_id": "597102139670",
            "tags": {
              "name": "env"
            },
            "tags_all": {
              "name": "env"
            }
          }
        }
      ]
    }
  ]
}